@@ -1,8 +1,11 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2004 Gentoo Technologies, Inc.
-# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.14 2004/12/20 00:13:46 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.15 2004/12/20 07:18:58 agaffney Exp $
 
 *GLI-gtkfe-0.01 (11 Dec 2004)
+
+  20 Dec 2004; Andrew Gaffney <agaffney@gentoo.org>
+  Partition screen "complete" with idiot-proofed goodness!
 
   19 Dec 2004; Andrew Gaffney <agaffney@gentoo.org>
   Exit button works. Load button works. Save button works. Minor fixes to
